@@ -11,6 +11,7 @@ inherit autotools eutils git-r3 readme.gentoo
 DESCRIPTION="fast compiler cache"
 HOMEPAGE="http://ccache.samba.org/"
 
+SRC_URI=""
 LICENSE="GPL-3"
 SLOT="0"
 KEYWORDS=""
@@ -41,13 +42,13 @@ src_install() {
 
 	DOC_CONTENTS="
 To use ccache with **non-Portage** C compiling, add
-${EPREFIX}/usr/lib/ccache/bin to the beginning of your path, before ${EPREFIX}usr/bin.
+'${EPREFIX}/usr/lib/ccache/bin' to the beginning of your path, before '${EPREFIX}/usr/bin'.
 Portage 2.0.46-r11+ will automatically take advantage of ccache with
 no additional steps.  If this is your first install of ccache, type
-something like this to set a maximum cache size of 2GB:\\n
-# ccache -M 2G\\n
-If you are upgrading from an older version than 3.x you should clear all of your caches like so:\\n
-# CCACHE_DIR='${CCACHE_DIR:-${PORTAGE_TMPDIR}/ccache}' ccache -C\\n
+something like this to set a maximum cache size of 2GB:
+# ccache -M 2G
+If you are upgrading from an older version than 3.x you should clear all of your caches like so:
+# CCACHE_DIR='${CCACHE_DIR:-${PORTAGE_TMPDIR}/ccache}' ccache -C
 ccache now supports sys-devel/clang and dev-lang/icc, too!"
 
 	readme.gentoo_create_doc
