@@ -5,7 +5,6 @@
   <email>jer@gentoo.org</email>
 </maintainer>
 <use>
-	<flag name='X'>Install the X.org driver, OpenGL libraries, XvMC libraries, and VDPAU libraries</flag>
 	<flag name='kernel3-13'>Install unofficial patches for linux-3.13 and newer</flag>
 	<flag name='kernel3-14'>Install unofficial patches for linux-3.14 and newer</flag>
 	<flag name='kernel3-17'>Install unofficial patches for linux-3.17 and newer</flag>
