@@ -2,7 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-*pyrep-1.4 (10 Aug 2043)
+*pyrep-1.4-r1 (18 Jan 2015)
+
+  18 Jan 2015; Martin Väth <martin@mvath.de>:
+  Use new-style python dependency
+
+*pyrep-1.4 (10 Aug 2014)
 
   10 Aug 2014; Martin Väth <martin@mvath.de>:
   Version bump, remove old ebuild
